Added color coded role/DAG suggestioned assigning. Can update user role and DAG on a specific project, or all projects.

--- a/config.json
+++ b/config.json
@@ -32,6 +32,16 @@
 
   "project-settings": [
     {
+      "key": "access-project",
+      "name": "Project That Contains User Access Levels",
+      "type": "project-id"
+    },
+    {
+      "key": "role-project",
+      "name": "Project That Contains User Role Definitions",
+      "type": "project-id"
+    },
+    {
       "key": "role-projects",
       "name": "Project(s) That Will Be Included in User Role Functions",
       "type":"project-id",
@@ -39,7 +49,7 @@
     },
     {
       "key": "field-projects",
-      "name": "Fields That Can Indicate Extra Project IDs to Include in Reports",
+      "name": "Fields That Can Indicate Extra Project IDs to Include in User Role Functions",
       "type":"field-list",
       "repeatable": true
     }
