Alphabetizing dropdowns instead of ordering by unique keys. Added ability to delete users from projects. Removed duplicates of projects from the project list. Added column to show project ID. Added userid to heading of the table. Renamed link to module in left toolbar. Project names link to the project's user settings.

--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
   "links": {
     "project": [
       {
-        "name": "View/Edit User Roles",
+        "name": "Mass-assign User Rights",
         "icon": "report",
         "url": "assign_roles.php",
         "access": "design"
